Added profile viewing page that loads user data and displays it, also added a default profile picture to the page.

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -84,6 +84,10 @@ main {
   cursor: pointer;
 }
 
+.profile-content-container .profile-pic {
+  width: 15vw;
+}
+
 @media only screen and (max-width: 1700px) {
   .wishlist-list-container {
     grid-template-columns: repeat(4, 1fr);
