Added support for loading wishlists made by a certain user. Also made it so those wishlists get displayed in a profile view if there exists any. Also added navlink to all names in user list for easy navigation to profiles.

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -88,6 +88,10 @@ main {
   width: 15vw;
 }
 
+.link {
+  width: fit-content;
+}
+
 @media only screen and (max-width: 1700px) {
   .wishlist-list-container {
     grid-template-columns: repeat(4, 1fr);
